spawn.sh detects JRE/JDK to load required modules if using JRE